# django_q_example

./: README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
event/: admin.py  models.py  tasks.py  views.py
event/management/commands/: create_event_scheduler.py
event/migrations/: 0001_initial.py
