[tool.poetry]
name = "django_q_example"
version = "0.1.0"
description = ""
authors = ["Gaurav Paudel <gaurav.paudel@wesionary.team>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
django-q = "^1.3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
